--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/use-event",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "实现了事件总线的hooks，是fbemitter的再封装",
   "main": "index.js",
   "module": "index.modern.js",
@@ -18,7 +18,7 @@
   "author": "linzp",
   "license": "ISC",
   "peerDependencies": {
-    "react": "16.x"
+    "react": ">=16.x"
   },
   "dependencies": {
     "fbemitter": "^3.0.0"
