--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@kne/use-event",
-  "version": "0.1.3",
+  "version": "0.1.4",
+  "type": "module",
   "description": "实现了事件总线的hooks，是fbemitter的再封装",
-  "syntax": {
-    "esmodules": true
-  },
-  "main": "index.js",
+  "main": "index.cjs",
   "module": "index.modern.js",
   "source": "src/index.js",
   "scripts": {
@@ -27,8 +25,8 @@
     "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "files": [
-    "index.js",
-    "index.js.map",
+    "index.cjs",
+    "index.cjs.map",
     "index.modern.js",
     "index.modern.js.map"
   ],
